--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/crafty/0.5.3/crafty-min.js"></script>
     <script src="components/xdna.js"></script>
+    <script src="components/organism.js"></script>
     <script src="scenes/loading.js"></script>
     <script src="scenes/main.js"></script>
     <script src="game.js" ></script>
 </head>
-<body>
+<body style="background-color:#b3e0f2;">
+<article style="margin-left:auto;margin-right:auto; ">
+<h1>SimpleLife</h1>
+<div id="cr-stage" style="border: 2px solid #000;"></div>
+<div class="controls">
+<input id="startStopButton" type="button" value="Stop" />
+<input id="resetButton" type="button" value="Reset" />
+</div>
+</article>
 </body>
 </html>
