--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>CraftyLife</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/crafty/0.5.3/crafty-min.js"></script>
+    <script src="components/fps.js"></script>
+    <script src="components/slide.js"></script>
+    <script src="components/smoothslide.js"></script>
     <script src="components/xdna.js"></script>
     <script src="components/organism.js"></script>
     <script src="scenes/loading.js"></script>
@@ -13,7 +16,10 @@
 <body style="background-color:#b3e0f2;">
 <article style="margin-left:auto;margin-right:auto; ">
 <h1>SimpleLife</h1>
-<div id="cr-stage" style="border: 2px solid #000;"></div>
+<div id="cr-stage" style="border: 2px solid #000;">
+<div id="fpsCounter" style="position:absolute;left:0;top:0;">
+</div>
+</div>
 <div class="controls">
 <input id="startStopButton" type="button" value="Stop" />
 <input id="resetButton" type="button" value="Reset" />
