--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>CraftyLife</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/crafty/0.5.3/crafty-min.js"></script>
-    <script src="components/fps.js"></script>
-    <script src="components/slide.js"></script>
-    <script src="components/smoothslide.js"></script>
-    <script src="components/xdna.js"></script>
-    <script src="components/organism.js"></script>
-    <script src="scenes/loading.js"></script>
-    <script src="scenes/main.js"></script>
-    <script src="game.js" ></script>
+  <title>CraftyLife</title>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/crafty/0.5.3/crafty-min.js"></script>
+  <script src="components/fps.js"></script>
+  <script src="components/slide.js"></script>
+  <script src="components/wall.js"></script>
+  <script src="components/xdna.js"></script>
+  <script src="components/organism.js"></script>
+  <script src="scenes/loading.js"></script>
+  <script src="scenes/main.js"></script>
+  <script src="game.js" ></script>
 </head>
 <body style="background-color:#b3e0f2;">
-<article style="margin-left:auto;margin-right:auto; ">
+<article id="game-container" style="margin-left:auto;margin-right:auto; ">
 <h1>SimpleLife</h1>
-<div id="cr-stage" style="border: 2px solid #000;">
+<div id="cr-stage">
 <div id="fpsCounter" style="position:absolute;left:0;top:0;">
 </div>
 </div>
