Moved/Added displays for FPS and total cycles.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <article id="game-container" style="margin-left:auto;margin-right:auto; ">
 <h1>SimpleLife</h1>
 <div id="cr-stage">
-<div id="fpsCounter" style="position:absolute;left:0;top:0;">
-</div>
 </div>
 <div class="controls">
 <input id="startStopButton" type="button" value="Stop" />
 <input id="resetButton" type="button" value="Reset" />
+<div id="fpsCounter"></div>
+<div id="worldTime"></div>
 </div>
 </article>
 </body>
